Fix: trade page market selector search field overflow (#425)
* Fix: trade page market selector search field overflow

* Fix: market selector search field width fit its container

--- a/src/containers/ToolBar/ToolBar.pcss
+++ b/src/containers/ToolBar/ToolBar.pcss
@@ -11,8 +11,6 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: -5px;
-  position: sticky;
-  top: 0;
   z-index: 2;
 
   &-dropdown {
